Adding the joined players pusher and design

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,3 +79,25 @@
   transform-origin: center; /* Center the rotation */
   animation-fill-mode: forwards;
 }
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fade-in {
+  animation: fade-in 0.5s ease;
+}
+
+.img-hor {
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+}
